--- a/public/sass/components/tabscontent.scss
+++ b/public/sass/components/tabscontent.scss
@@ -1,3 +1,4 @@
+
 .profile-tab-content{
     margin-top: 8rem;
     padding: 0rem 2rem;
@@ -10,12 +11,18 @@
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 3rem;
+    // width: 100%;
 
     @media screen and (max-width: 500px){
         flex-direction: column;
     }
 
+    .baal{
+        flex: 2;
+    }
+
     &--input{
+        flex: 3;
         margin: 0 2rem;
     }
 
